Blender crashes when sidebar in Shader Editor is resized #67671

Closed
opened 2019-07-25 16:00:57 +02:00 by Johannes Lampert · 15 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce GTX 1080 Ti

Blender Version
Broken: 2.80 Release Candidate 2

Short description of error
Under certain conditions, Blender crashes when the sidebar in the Shader Editor is resized{F7628255}

https://imgur.com/2hPtoQ5
https://imgur.com/XyiJXo7

Exact steps for others to reproduce the error

  1. Navigate to Shader Editor
  2. Create Color Ramp node
  3. Open sidebar (N key)
  4. In the sidebar, open the Properties tab
  5. Move mouse cursor to the edge of the sidebar so that the "resize" cursor appears ( <---> )
  6. Click and drag to the right so that the sidebar shrinks
  7. Before the sidebar completely disappears, Blender crashes
**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce GTX 1080 Ti **Blender Version** Broken: 2.80 Release Candidate 2 **Short description of error** Under certain conditions, Blender crashes when the sidebar in the Shader Editor is resized{[F7628255](https://archive.blender.org/developer/F7628255/20190725_bug_color_ramp.blend)} https://imgur.com/2hPtoQ5 https://imgur.com/XyiJXo7 **Exact steps for others to reproduce the error** 1. Navigate to Shader Editor 2. Create Color Ramp node 3. Open sidebar (N key) 4. In the sidebar, open the Properties tab 5. Move mouse cursor to the edge of the sidebar so that the "resize" cursor appears ( <---> ) 6. Click and drag to the right so that the sidebar shrinks 7. Before the sidebar completely disappears, Blender crashes

Added subscriber: @alterdings

Added subscriber: @alterdings

Added subscriber: @Otilla

Added subscriber: @Otilla

I can confirm this crash.

version: 2.80 (sub 75), branch: master, commit date: 2019-07-25 08:02, hash: 4f363283eb

Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

I can confirm this crash. version: 2.80 (sub 75), branch: master, commit date: 2019-07-25 08:02, hash: 4f363283eb Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann

Can confirm. The daily build from last night also crashes on my system.

Can confirm. The daily build from last night also crashes on my system.

Added subscriber: @a.monti

Added subscriber: @a.monti

My debug build fails here:

blender: /home/alessio/blender-git/blender/source/blender/gpu/intern/gpu_immediate.c:204: immBegin: Assertion `vertex_count_makes_sense_for_primitive(vertex_len, prim_type)' failed.

Selezione_0023.png

My debug build fails here: ``` blender: /home/alessio/blender-git/blender/source/blender/gpu/intern/gpu_immediate.c:204: immBegin: Assertion `vertex_count_makes_sense_for_primitive(vertex_len, prim_type)' failed. ``` ![Selezione_0023.png](https://archive.blender.org/developer/F7628319/Selezione_0023.png)
Member

Added subscriber: @CansecoGPC

Added subscriber: @CansecoGPC
Member

I can reproduce this crash on Manjaro Linux 18.0.4, with latest master version cb10bd379b.
Tried with defaults settings by renaming the config folder too.

Here's the blender crash file:
blender.crash.txt

I can reproduce this crash on Manjaro Linux 18.0.4, with latest master version cb10bd379b2d. Tried with defaults settings by renaming the config folder too. Here's the blender crash file: [blender.crash.txt](https://archive.blender.org/developer/F7628330/blender.crash.txt)

Added subscriber: @panthistle

Added subscriber: @panthistle

I confirm this crash with Blender 2.80 RC3 on Windows 7 SP1 64b

I confirm this crash with Blender 2.80 RC3 on Windows 7 SP1 64b
Germano Cavalcante self-assigned this 2019-07-25 21:54:42 +02:00

This issue was referenced by 11b994e26e

This issue was referenced by 11b994e26e4dbfc40dc6ff2194b7855e2eb20f23
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I guess this is fixed now? Not sure why the commit did not close the report automatically.

I guess this is fixed now? Not sure why the commit did not close the report automatically.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67671
No description provided.